<resources>
    <string name="app_name">Notas</string>
    <string name="lorem_ipsum">Etiam ac ante ut erat lobortis hendrerit at eu erat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis consectetur ullamcorper. Pellentesque malesuada porta aliquam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat lacus, ultricies sed tortor eu, interdum mattis odio. Curabitur mauris lacus, tempor nec ullamcorper id, dictum quis odio. Pellentesque et libero vel velit maximus sollicitudin.</string>
    <string name="text_empty">No se encontraron notas, has clic en la imagen para agregar una nueva.</string>
    <string name="delete_success">Nota eliminada correctamente</string>
    <string name="undo">Deshacer</string>
    <string name="title_content">Contenido</string>
    <string name="title_note">Titulo</string>
    <string name="title_is_important">Es Importante?</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_edit_note">Modificar nota</string>
    <string name="title_create_note">Crear nota</string>
    <string name="is_done">Está Terminado?</string>
    <string name="txt_delete">Eliminar</string>
</resources>