<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_title_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Titulo Dialog" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_txt_input_title"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/title_note"
        app:layout_constraintEnd_toEndOf="@+id/txt_title_dialog"
        app:layout_constraintStart_toStartOf="@+id/txt_title_dialog"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_dialog">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_txt_input_content"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/title_content"
        app:layout_constraintEnd_toEndOf="@+id/layout_txt_input_title"
        app:layout_constraintStart_toStartOf="@+id/layout_txt_input_title"
        app:layout_constraintTop_toBottomOf="@+id/layout_txt_input_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_input_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="10"
            android:scrollbars="vertical" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/check_important"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_is_important"
        app:layout_constraintStart_toStartOf="@+id/layout_txt_input_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_txt_input_content" />

    <CheckBox
        android:id="@+id/check_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/is_done"
        app:layout_constraintEnd_toEndOf="@+id/layout_txt_input_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_txt_input_content" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryVariant"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btn_accept"
        app:layout_constraintEnd_toEndOf="@+id/layout_txt_input_content"
        app:layout_constraintTop_toTopOf="@+id/btn_accept" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_accept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintStart_toStartOf="@+id/layout_txt_input_content"
        app:layout_constraintTop_toBottomOf="@+id/check_important" />


</androidx.constraintlayout.widget.ConstraintLayout>